--- a/src/main/resources/Layouts/PrimaryPage.fxml
+++ b/src/main/resources/Layouts/PrimaryPage.fxml
@@ -25,6 +25,16 @@
                         <Font size="11.0" />
                      </font>
                   </Button>
+                  <Button layoutX="4.0" layoutY="152.0" mnemonicParsing="false" onAction="#OnChangeWindowButtonClick" prefHeight="24.0" prefWidth="101.0" text="Start Server">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="4.0" layoutY="184.0" mnemonicParsing="false" onAction="#OnStopServerButtonClick" prefHeight="24.0" prefWidth="99.0" text="Close Server" textAlignment="CENTER">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
          </children>
