--- a/src/main/resources/Layouts/PrimaryPage.fxml
+++ b/src/main/resources/Layouts/PrimaryPage.fxml
@@ -45,6 +45,11 @@
          <children>
             <Label layoutX="14.0" layoutY="90.0" text="Response" />
             <TextArea fx:id="responseTextArea" editable="false" layoutX="17.0" layoutY="116.0" prefHeight="200.0" prefWidth="440.0" wrapText="true" />
+            <Button layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#OnChangeSceneButton" prefHeight="24.0" prefWidth="84.0" text="Change Scene">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </center>
