--- a/src/main/resources/Layouts/SecondPage.fxml
+++ b/src/main/resources/Layouts/SecondPage.fxml
@@ -2,10 +2,15 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.web.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.JavaFXInterface.GUI">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.JavaFXInterface.Controller">
    <children>
-      <Button layoutX="29.0" layoutY="30.0" mnemonicParsing="false" text="Button" />
-      <ProgressBar layoutX="359.0" layoutY="227.0" prefWidth="200.0" progress="0.0" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#HandleButtonPress" prefHeight="24.0" prefWidth="74.0" text="back">
+         <font>
+            <Font size="11.0" />
+         </font></Button>
+      <WebView fx:id="webviewBox" layoutX="9.0" layoutY="43.0" prefHeight="357.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0" />
    </children>
 </AnchorPane>
