--- a/src/main/resources/Styles/PrimaryPage.css
+++ b/src/main/resources/Styles/PrimaryPage.css
@@ -2,7 +2,8 @@
     -fx-font-size: 16pt;
     -fx-font-family: "Courier New";
     -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+    /*-fx-background: rgb(225, 228, 203);*/
+    -fx-background-image: url("test.jpg");
 }
 
 .custom-label {
