--- a/src/main/resources/Styles/PrimaryPage.css
+++ b/src/main/resources/Styles/PrimaryPage.css
@@ -3,7 +3,7 @@
     -fx-font-family: "Courier New";
     -fx-base: rgb(132, 145, 47);
     /*-fx-background: rgb(225, 228, 203);*/
-    -fx-background-image: url("test.jpg");
+    -fx-background-image: url("test2.png");
 }
 
 .custom-label {
