--- a/src/main/resources/Layouts/PrimaryPage.fxml
+++ b/src/main/resources/Layouts/PrimaryPage.fxml
@@ -12,29 +12,45 @@
          <children>
             <AnchorPane prefHeight="414.0" prefWidth="105.0">
                <children>
-                  <Button id="getAccessTokenBTN" layoutX="4.0" layoutY="88.0" mnemonicParsing="false" onAction="#OnGetTokenButtonClick" prefHeight="24.0" prefWidth="101.0" text="Get Access Token">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Button>
-                  <Button id="getPlaylistDataBTN" layoutX="5.0" layoutY="120.0" mnemonicParsing="false" onAction="#OnGetPlaylistDataButtonClick" prefHeight="24.0" prefWidth="100.0" text="Get Playlist Data">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="4.0" layoutY="152.0" mnemonicParsing="false" onAction="#OnStartServerButtonClick" prefHeight="24.0" prefWidth="101.0" text="Start Server">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="4.0" layoutY="184.0" mnemonicParsing="false" onAction="#OnStopServerButtonClick" prefHeight="24.0" prefWidth="99.0" text="Close Server" textAlignment="CENTER">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Button>
+                  <VBox prefHeight="367.0" prefWidth="105.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#OnStopServerButtonClick" prefHeight="24.0" prefWidth="99.0" text="Close Server" textAlignment="CENTER">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="100.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#OnStartServerButtonClick" prefHeight="24.0" prefWidth="101.0" text="Start Server">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button id="getPlaylistDataBTN" mnemonicParsing="false" onAction="#OnGetPlaylistDataButtonClick" prefHeight="24.0" prefWidth="100.0" text="Get Playlist Data">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button id="getAccessTokenBTN" mnemonicParsing="false" onAction="#OnGetTokenButtonClick" prefHeight="24.0" prefWidth="101.0" text="Get Access Token">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
          </children>
@@ -45,11 +61,6 @@
          <children>
             <Label layoutX="14.0" layoutY="90.0" text="Response" />
             <TextArea fx:id="responseTextArea" editable="false" layoutX="17.0" layoutY="116.0" prefHeight="200.0" prefWidth="440.0" wrapText="true" />
-            <Button layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#OnChangeSceneButton" prefHeight="24.0" prefWidth="84.0" text="Change Scene">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Button>
          </children>
       </AnchorPane>
    </center>
@@ -81,6 +92,17 @@
                <font>
                   <Font size="11.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnChangeSceneButton" prefHeight="24.0" prefWidth="101.0" text="Change Scene" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+               <font>
+                  <Font size="11.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
             </Button>
          </children>
       </GridPane>
