--- a/src/main/resources/Layouts/PrimaryPage.fxml
+++ b/src/main/resources/Layouts/PrimaryPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.web.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/PrimaryPage.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.JavaFXInterface.GUI">
    <left>
@@ -56,14 +57,6 @@
          </children>
       </VBox>
    </left>
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="14.0" layoutY="90.0" text="Response" />
-            <TextArea fx:id="responseTextArea" editable="false" layoutX="17.0" layoutY="116.0" prefHeight="200.0" prefWidth="440.0" wrapText="true" />
-         </children>
-      </AnchorPane>
-   </center>
    <top>
       <GridPane prefHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -107,4 +100,29 @@
          </children>
       </GridPane>
    </top>
+   <bottom>
+      <WebView fx:id="webviewBox" prefHeight="107.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="60.0" minHeight="0.0" percentHeight="20.0" prefHeight="1.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextArea fx:id="responseTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </GridPane.margin></TextArea>
+            <Label prefHeight="37.0" prefWidth="152.0" style="-fx-text-fill: white;" text="Response" underline="true">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+   </center>
 </BorderPane>
