--- a/src/main/resources/Layouts/Webview.fxml
+++ b/src/main/resources/Layouts/Webview.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.web.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.JavaFXInterface.Views.WebviewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.WebviewController">
    <top>
       <GridPane prefHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -18,12 +18,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField promptText="Search" GridPane.columnIndex="1">
+            <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="Search" GridPane.columnIndex="1">
                <font>
                   <Font size="11.0" />
                </font>
             </TextField>
-            <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="2">
+            <Button mnemonicParsing="false" onAction="#OnPageSearchButton" text="Search" GridPane.columnIndex="2">
                <font>
                   <Font size="11.0" />
                </font>
