--- a/src/main/resources/Layouts/SettingsPage.fxml
+++ b/src/main/resources/Layouts/SettingsPage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.JavaFXInterface.Views.SettingsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.SettingsController">
    <top>
       <GridPane minHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -25,7 +25,7 @@
                   <Insets right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Search" textAlignment="CENTER" GridPane.columnIndex="2">
+            <Button mnemonicParsing="false" onAction="#OnPageSearchButton" text="Search" textAlignment="CENTER" GridPane.columnIndex="2">
                <font>
                   <Font size="11.0" />
                </font>
@@ -33,7 +33,7 @@
                   <Insets left="5.0" />
                </GridPane.margin>
             </Button>
-            <TextField promptText="search" GridPane.columnIndex="1">
+            <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="search" GridPane.columnIndex="1">
                <font>
                   <Font size="11.0" />
                </font>
