--- a/src/main/resources/Layouts/PrimaryPage.fxml
+++ b/src/main/resources/Layouts/PrimaryPage.fxml
@@ -6,135 +6,152 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.GUI">
-   <left>
-      <VBox prefHeight="320.0" prefWidth="105.0" BorderPane.alignment="CENTER">
-         <children>
-            <AnchorPane prefHeight="414.0" prefWidth="105.0">
-               <children>
-                  <VBox prefHeight="367.0" prefWidth="105.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#OnStartServerButtonClick" prefHeight="24.0" prefWidth="101.0" text="Start Server">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="100.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#OnStopServerButtonClick" prefHeight="24.0" prefWidth="99.0" text="Close Server" textAlignment="CENTER">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button id="getAccessTokenBTN" mnemonicParsing="false" onAction="#OnGetTokenButtonClick" prefHeight="24.0" prefWidth="101.0" text="Get Access Token">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button id="getPlaylistDataBTN" mnemonicParsing="false" onAction="#OnGetPlaylistDataButtonClick" prefHeight="24.0" prefWidth="100.0" text="Get Playlist Data">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets bottom="5.0" top="5.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button fx:id="AddItemsBTN" mnemonicParsing="false" onAction="#GoToAddItemScene" prefHeight="24.0" prefWidth="99.0" text="Add Items">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button fx:id="SettingsBTN" mnemonicParsing="false" onAction="#GoToSettingsScene" prefHeight="24.0" prefWidth="99.0" text="Settings">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                        </Button>
-                     </children>
-                  </VBox>
-               </children>
-            </AnchorPane>
-         </children>
-      </VBox>
-   </left>
-   <top>
-      <GridPane prefHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="API JAVAFX Alpha">
-               <font>
-                  <Font size="11.0" />
-               </font>
-               <padding>
-                  <Insets left="15.0" />
-               </padding>
-            </Label>
-            <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="search" GridPane.columnIndex="1">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </TextField>
-            <Button mnemonicParsing="false" onAction="#OnPageSearchButton" text="Search" GridPane.columnIndex="2">
-               <font>
-                  <Font size="11.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnChangeSceneButton" prefHeight="24.0" prefWidth="101.0" text="Change Scene" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
-               <font>
-                  <Font size="11.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets right="15.0" />
-               </GridPane.margin>
-            </Button>
-         </children>
-      </GridPane>
-   </top>
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="60.0" minHeight="0.0" percentHeight="20.0" prefHeight="1.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextArea fx:id="responseTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="160.0" left="20.0" right="300.0" />
-               </GridPane.margin></TextArea>
-            <Label prefHeight="37.0" prefWidth="152.0" style="-fx-text-fill: white;" text="Response" underline="true">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-      </GridPane>
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.GUI">
+    <left>
+        <VBox prefHeight="320.0" prefWidth="105.0" BorderPane.alignment="CENTER">
+            <children>
+                <AnchorPane prefHeight="414.0" prefWidth="105.0">
+                    <children>
+                        <VBox prefHeight="367.0" prefWidth="105.0" AnchorPane.bottomAnchor="0.0"
+                              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <children>
+                                <Button mnemonicParsing="false" onAction="#OnStartServerButtonClick" prefHeight="24.0"
+                                        prefWidth="101.0" text="Start Server">
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets top="100.0"/>
+                                    </VBox.margin>
+                                </Button>
+                                <Button mnemonicParsing="false" onAction="#OnStopServerButtonClick" prefHeight="24.0"
+                                        prefWidth="99.0" text="Close Server" textAlignment="CENTER">
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets top="5.0"/>
+                                    </VBox.margin>
+                                </Button>
+                                <Button id="getAccessTokenBTN" mnemonicParsing="false" onAction="#OnGetTokenButtonClick"
+                                        prefHeight="24.0" prefWidth="101.0" text="Get Access Token">
+                                    <cursor>
+                                        <Cursor fx:constant="HAND"/>
+                                    </cursor>
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets top="5.0"/>
+                                    </VBox.margin>
+                                </Button>
+                                <Button id="getPlaylistDataBTN" mnemonicParsing="false"
+                                        onAction="#OnGetPlaylistDataButtonClick" prefHeight="24.0" prefWidth="100.0"
+                                        text="Get Playlist Data">
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets bottom="5.0" top="5.0"/>
+                                    </VBox.margin>
+                                </Button>
+                                <Button fx:id="AddItemsBTN" mnemonicParsing="false" onAction="#GoToAddItemScene"
+                                        prefHeight="24.0" prefWidth="99.0" text="Add Items">
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets bottom="5.0"/>
+                                    </VBox.margin>
+                                </Button>
+                                <Button fx:id="SettingsBTN" mnemonicParsing="false" onAction="#GoToSettingsScene"
+                                        prefHeight="24.0" prefWidth="99.0" text="Settings">
+                                    <font>
+                                        <Font size="11.0"/>
+                                    </font>
+                                    <VBox.margin>
+                                        <Insets bottom="5.0"/>
+                                    </VBox.margin>
+                                </Button>
+                            </children>
+                        </VBox>
+                    </children>
+                </AnchorPane>
+            </children>
+        </VBox>
+    </left>
+    <top>
+        <GridPane prefHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Label text="API JAVAFX Alpha">
+                    <font>
+                        <Font size="11.0"/>
+                    </font>
+                    <padding>
+                        <Insets left="15.0"/>
+                    </padding>
+                </Label>
+                <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="search"
+                           GridPane.columnIndex="1">
+                    <font>
+                        <Font size="11.0"/>
+                    </font>
+                </TextField>
+                <Button mnemonicParsing="false" onAction="#OnPageSearchButton" text="Search" GridPane.columnIndex="2">
+                    <font>
+                        <Font size="11.0"/>
+                    </font>
+                    <GridPane.margin>
+                        <Insets left="5.0"/>
+                    </GridPane.margin>
+                </Button>
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnChangeSceneButton" prefHeight="24.0"
+                        prefWidth="101.0" text="Change Scene" textAlignment="CENTER" GridPane.columnIndex="2"
+                        GridPane.halignment="RIGHT">
+                    <font>
+                        <Font size="11.0"/>
+                    </font>
+                    <GridPane.margin>
+                        <Insets right="15.0"/>
+                    </GridPane.margin>
+                </Button>
+            </children>
+        </GridPane>
+    </top>
+    <center>
+        <GridPane BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="60.0" minHeight="0.0" percentHeight="20.0" prefHeight="1.0"
+                                vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <TextArea fx:id="responseTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true"
+                          GridPane.rowIndex="1">
+                    <GridPane.margin>
+                        <Insets bottom="160.0" left="20.0" right="300.0"/>
+                    </GridPane.margin>
+                </TextArea>
+                <Label prefHeight="37.0" prefWidth="152.0" style="-fx-text-fill: white;" text="Response"
+                       underline="true">
+                    <font>
+                        <Font name="System Bold" size="18.0"/>
+                    </font>
+                </Label>
+            </children>
+        </GridPane>
+    </center>
 </BorderPane>
